some updates in task 2 and task 3

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1499,102 +1499,160 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e9e58b78-3af8-4c6b-8d5b-f2145e3060d6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "dadc50be",
+   "id": "2966f811-5ed8-4376-8197-106e30a51674",
    "metadata": {},
    "source": [
+    "# Superhero Winning Probability Prediction\n",
+    "## Group 125 Presentation\n",
+    "### June 22, 2025\n",
     "\n",
-    "# Superhero Dataset - Exploratory Data Analysis Report\n",
-    "Generated on: 2025-06-22 15:07:07\n",
+    "---\n",
     "\n",
-    "## Executive Summary\n",
-    "This report presents a comprehensive exploratory data analysis of the superhero dataset containing 1041 characters with 24 features.\n",
+    "## Slide 1: Exploratory Data Analysis - Overview\n",
     "\n",
-    "## Dataset Overview\n",
-    "- **Total Records**: 1,041\n",
-    "- **Total Features**: 24\n",
-    "- **Numerical Features**: 12\n",
-    "- **Categorical Features**: 11\n",
-    "- **Memory Usage**: 0.19 MB\n",
-    "- **Duplicate Records**: 49\n",
+    "### Dataset Characteristics\n",
+    "- **Dataset Size**: 1,041 characters, 24 features\n",
+    "- **Target Variable**: Winning probability (0.22 to 15.20) → Binary classification (win/lose)\n",
+    "- **Feature Types**: 12 numerical, 11 categorical features\n",
+    "- **Class Balance**: 73.6% winners, 26.4% losers (imbalanced)\n",
     "\n",
-    "## Target Variable Analysis\n",
+    "### Key Findings from EDA\n",
+    "- **Missing Data**: High in eye_color (32.4%), secret_code (37.3%), speed (27.2%)\n",
+    "- **Data Quality Issues**: Role spellings inconsistent (Hero vs H3ro vs HerO)\n",
+    "- **Outliers**: Some extreme win_prob values (max: 15.20 vs typical 0.2-1.0)\n",
     "\n",
-    "### Winning Probability Statistics\n",
-    "- **Mean**: 0.8102\n",
-    "- **Median**: 0.6000\n",
-    "- **Range**: [0.2200, 15.2000]\n",
-    "- **Standard Deviation**: 1.5649\n",
+    "### Target Distribution\n",
+    "- Winning probability ranges from 0.22 to 15.20 (capped at 1.0 for modeling)\n",
+    "- 73.6% of characters have winning probability > 0.5\n",
+    "- Clear class imbalance favoring winners\n",
     "\n",
-    "### Binary Classification Distribution\n",
+    "---\n",
     "\n",
-    "- **Winners** (>0.5): 766 (73.6%)\n",
-    "- **Losers** (≤0.5): 275 (26.4%)\n",
+    "## Slide 2: Exploratory Data Analysis - Feature Insights\n",
     "\n",
-    "## Data Quality Assessment\n",
+    "### Most Important Features (Correlation with Win Probability)\n",
+    "1. **ranking**: r = -0.0690 (lower ranking = higher win probability)\n",
+    "2. **battle_iq**: r = +0.0470 (higher battle IQ = higher win probability)\n",
+    "3. **intelligence**: r = +0.0430 (smarter characters tend to win)\n",
+    "4. **speed**: r = +0.0425 (faster characters have slight advantage)\n",
+    "5. **height**: r = -0.0279 (shorter characters tend to win slightly more)\n",
     "\n",
-    "### Missing Values\n",
-    "Total missing values: 1,701\n",
     "\n",
-    "#### Columns with >5% Missing Values:\n",
-    "- **secret_code**: 388 (37.3%)\n",
-    "- **eye_color**: 337 (32.4%)\n",
-    "- **speed**: 283 (27.2%)\n",
-    "- **gender**: 176 (16.9%)\n",
-    "- **hair_color**: 101 (9.7%)\n",
-    "- **training_time**: 96 (9.2%)\n",
-    "- **intelligence**: 76 (7.3%)\n",
-    "- **weight**: 72 (6.9%)\n",
-    "- **power_level**: 64 (6.1%)\n",
+    "### Notable Patterns Discovered\n",
+    "- **Character Roles**: Heroes (288) vs Villains (292) roughly balanced, but multiple spellings\n",
+    "- **Power vs Success**: Surprisingly weak correlation between raw power and winning\n",
+    "- **Intelligence Matters**: Battle IQ and intelligence are key predictors\n",
+    "- **Ranking is King**: Most important single predictor (popularity/effectiveness measure)\n",
     "\n",
-    "## Feature Correlation Analysis\n",
+    "---\n",
     "\n",
-    "### Top 5 Features Most Correlated with Win Probability:\n",
-    "1. **ranking**: 0.0690 (negative)\n",
-    "1. **battle_iq**: 0.0470 (positive)\n",
-    "1. **intelligence**: 0.0430 (positive)\n",
-    "1. **speed**: 0.0425 (positive)\n",
-    "1. **height**: 0.0279 (negative)\n",
+    "## Slide 3: Methodology\n",
     "\n",
-    "## Key Insights\n",
+    "### Data Preprocessing Pipeline\n",
+    "- **Missing Value Imputation**: Median imputation for numerical features, mode for categorical\n",
+    "- **Categorical Encoding**: Label encoding for categorical variables\n",
+    "- **Role Standardization**: Unified Hero/Villain spellings (H3ro → Hero, VIllain → Villain)\n",
+    "- **Target Engineering**: Capped extreme values, binary classification (threshold = 0.5)\n",
     "\n",
-    "### Data Distribution Patterns\n",
-    "- The dataset shows imbalanced class distribution\n",
-    "- Categorical features appear consistent\n",
+    "### Data Splitting Strategy\n",
+    "- **Training Set**: 80% of data (828 samples)\n",
+    "- **Test Set**: 20% of data (208 samples)  \n",
+    "- **Stratified Split**: Maintained 73.9% winner / 26.1% loser balance\n",
+    "- **Cross-Validation**: 5-fold stratified CV for model selection\n",
     "\n",
-    "### Feature Characteristics\n",
-    "- Numerical features show varying scales requiring normalization\n",
-    "- Several features exhibit right-skewed distributions\n",
-    "- Outliers detected in multiple numerical features\n",
+    "### Models Evaluated\n",
+    "- **Random Forest**: Tree-based ensemble with class balancing\n",
+    "- **Gradient Boosting**: Sequential boosting for complex patterns  \n",
+    "- **Logistic Regression**: Linear baseline with feature scaling\n",
+    "- **SVM**: Support Vector Machine with RBF kernel\n",
+    "- **AdaBoost**: Adaptive boosting ensemble\n",
+    "- **K-Nearest Neighbors**: Distance-based classification\n",
     "\n",
-    "### Modeling Recommendations\n",
-    "1. **Data Preprocessing**: Handle missing values through imputation\n",
-    "2. **Feature Engineering**: Standardize categorical spellings, normalize numerical features\n",
-    "3. **Class Imbalance**: Consider balanced sampling or weighted algorithms\n",
-    "4. **Feature Selection**: Focus on top correlated features for initial modeling\n",
+    "---\n",
     "\n",
-    "## Files Generated\n",
-    "- `01_dataset_overview.png`: Basic dataset visualizations\n",
-    "- `02_correlation_analysis.png`: Feature correlation heatmaps\n",
-    "- `03_feature_distributions.png`: Individual feature distributions\n",
-    "- `04_target_analysis.png`: Target variable analysis\n",
-    "- `interactive_correlation.html`: Interactive correlation matrix\n",
-    "- `interactive_scatter.html`: Interactive scatter plots\n",
-    "\n"
+    "## Slide 4: Model Evaluation\n",
+    "\n",
+    "### Model Performance Comparison\n",
+    "| Model | Cross-Val AUC | Test AUC | Best Model |\n",
+    "|-------|---------------|----------|------------|\n",
+    "| AdaBoost | 0.960 | 0.954 | ✓ |\n",
+    "| Gradient Boosting | 0.916 | 0.919 | ✗ |\n",
+    "| Random Forest | 0.892 | 0.892 | ✗ |\n",
+    "| SVM | 0.838 | 0.834 | ✗ |\n",
+    "| Logistic Regression | 0.812 | 0.802 | ✗ |\n",
+    "| K-Nearest Neighbors | 0.732 | 0.687 | ✗ |\n",
+    "\n",
+    "\n",
+    "### Best Model: AdaBoost\n",
+    "- **Final Test AUC**: 0.954 - Excellent performance given weak feature correlations\n",
+    "- **Precision**: 0.914 - 91% of predicted winners actually win  \n",
+    "- **Recall**: 0.961 - Captures 96% of actual winners\n",
+    "- **F1-Score**: 0.937 - Balanced performance metric\n",
+    "\n",
+    "### Feature Importance (Top 5)\n",
+    "1. **skin_type_encoded**: 0.350 - Important predictor\n",
+    "2. **special_attack_encoded**: 0.191 - Important predictor\n",
+    "3. **training_efficiency**: 0.073 - Important predictor\n",
+    "4. **power_level**: 0.060 - Raw power still important\n",
+    "5. **gender**: 0.060 - Important predictor\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Slide 5: Discussion & Task Results\n",
+    "\n",
+    "### Task 2: Unseen Data Predictions\n",
+    "**Three Superheroes:**\n",
+    "- 🦸 Captain Britain: 0.657 (65.7%)\n",
+    "- 🦸 Golden Glider: 0.743 (74.3%)\n",
+    "\n",
+    "**Three Villains:**\n",
+    "- 🦹 Overhaul: 0.755 (75.5%)\n",
+    "- 🦹 Madame Hydra: 0.741 (74.1%)\n",
+    "- 🦹 King Shark: 0.652 (65.2%)\n",
+    "\n",
+    "**Fight Predictions:**\n",
+    "- Fight 1: Endeavor vs Overhaul → **Overhaul WINS** (0.755 vs 0.547)\n",
+    "- Fight 2: Captain Britain vs Madame Hydra → **Madame Hydra WINS** (0.741 vs 0.657)\n",
+    "- Fight 3: Golden Glider vs King Shark → **Golden Glider WINS** (0.743 vs 0.652)\n",
+    "\n",
+    "### Task 3: Perfect Villain Analysis (100% Win Rate)\n",
+    "**Why Penguin Always Wins:**\n",
+    "- **Power Level**: 16,015 (91st percentile) - Near maximum power\n",
+    "- **Excellent Ranking**: 1,218 (23rd percentile) - Top-tier popularity/effectiveness  \n",
+    "- **Extensive Training**: 9,496 hours (92nd percentile) - Exceptional preparation\n",
+    "- **Balanced Stats**: Above average in speed, intelligence, and battle IQ\n",
+    "\n",
+    "**Key Insight**: Penguin doesn't dominate any single category but achieves an optimal combination of high power, excellent ranking, and extensive training - creating an unbeatable profile.\n",
+    "\n",
+    "### Special Observations\n",
+    "- **Surprising Finding**: Raw power alone doesn't guarantee victory - ranking and intelligence matter more\n",
+    "- **Model Limitations**: Weak correlations suggest other unmeasured factors influence winning\n",
+    "- **Data Quality**: Inconsistent spellings and missing values indicate synthetic data artifacts\n",
+    "- **Real-World Applicability**: Framework could apply to sports analytics, gaming balance, or competitive rankings\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Thank You!\n",
+    "### Questions & Discussion\n",
+    "\n",
+    "**Contact Information:**\n",
+    "- Project Repository: https://github.com/SaimAkramGill/kddmproject2025.git\n",
+    "- Email: [muhammad.akram@edu.uni-graz.at]\n",
+    "\n",
+    "**Key Takeaways:**\n",
+    "1. Ranking and intelligence are more predictive than raw power\n",
+    "2. AdaBoost achieved best performance\n",
+    "3. Perfect villains win through balanced excellence, not single strengths\n",
+    "4. Data quality and feature engineering are crucial for model success\n"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "07d13059",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "680e55e7-de53-4a6a-91f2-cf8c883dbce1",
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
